# kajiki

./: .buildinfo  .flake8  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.rst  CNAME  LICENSE  LICENSE.rst  MANIFEST.in  NOTES.txt  README  README.rst  TODO.txt  changes.html  cli.html  genindex.html  i18n.html  index.html  migrating_from_genshi.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  release_new_version.py  runtime.html  search.html  searchindex.js  setup.cfg  setup.py  speedtest.py  templating-basics.html  test.py  text-templates.html  xml-templates.html
.doctrees/: changes.doctree  cli.doctree  environment.pickle  i18n.doctree  index.doctree  migrating_from_genshi.doctree  runtime.doctree  templating-basics.doctree  text-templates.doctree  xml-templates.doctree
.github/workflows/: ci.yaml  docs.yaml  lint.yaml  unit-tests.yaml
_modules/: index.html
_modules/kajiki/: ir.html  template.html  xml_template.html
_sources/: cli.rst.txt  i18n.rst.txt  migrating_from_genshi.rst.txt  xml-templates.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  i18n.rst  index.rst  migrating_from_genshi.rst  runtime.rst  templating-basics.rst  text-templates.rst  xml-templates.rst
docs/include/: index_fastpt.html  index_kajiki.html  layout.html  master.html
docs/media/: Logo.xcf  icon.xcf
fastpt/: __init__.py  compiler.py  core.py  etree.py  exceptions.py  loader.py  runtime.py  template.py
fastpt/tests/: test_basic.py
fastpt/tests/data/: assert.html  child.html  lib.html  list.html  parent.html  test_include.html
fastpt/tests/perf/: tables.html
fastpt/tests/v2/: test_ir.py  test_runtime.py  test_text.py  test_xml.py
fastpt/v2/: NOTES.txt  __init__.py  context.py  core.py  ir.py  loader.py  markup_template.py  runtime.py  template.py  text.py  util.py  xml_template.py
kajiki/: __init__.py  __main__.py  compiler.py  ddict.py  doctype.py  doctypes.py  entities.py  html_utils.py  i18n.py  ir.py  lnotab.py  loader.py  markup_template.py  template.py  text.py  util.py  version.py  xml_template.py
kajiki/integration/: __init__.py  pyramid.py  turbogears1.py
kajiki/perf/: tables.html
kajiki/perf/genshi_bench/: basic.py  bigtable.py  xpath.py
kajiki/perf/genshi_bench/chameleon_genshi/: template.html
kajiki/perf/genshi_bench/jinja2/templates/: template.html
kajiki/perf/genshi_bench/kajiki/: base.html  lib.html  template.html
kajiki/perf/genshi_bench/mako/: template.html
kajiki/tests/: test_cli.py  test_doctype.py  test_e2e.py  test_ir.py  test_runtime.py  test_text.py  test_xml.py
kajiki/tests/data/: debug.html  debug.txt  file_child.html  kitchensink.html  simple.html
tests/: conftest.py  test_cli.py  test_doctype.py  test_e2e.py  test_ir.py  test_runtime.py  test_text.py  test_xml.py
tests/data/: debug.html  debug.txt  error.html  file_parent.html
tests/data/golden/: kitchensink1.html
tests/integration/: test_tg2.py
